# metnum-tp03

./: .gitignore  README.md  TODO.md  TODO.txt
experimentacion/: convergencia.py  densidad.py  tiempo_ejecucion.py
experimentacion/base/: IO.py  utils.py
experimentacion/resultados/convergencia-iterativos/: error-convergencia.csv  promedio-100.csv  sumario.csv
experimentacion/resultados/densidad/: densidad_aleatorio.csv  densidad_aleatorio_sumario.csv  densidad_red_sumidero.csv  densidad_red_sumidero_sumario.csv  densidad_todo_con_todo.csv  densidad_todo_con_todo_sumario.csv  densidad_uno_a_todos.csv  densidad_uno_a_todos_sumario.csv  densidad_viborita.csv  densidad_viborita_sumario.csv
experimentacion/resultados/tiempo-de-ejecucion/: tiempo-de-ejecucion.csv  tiempo-ejecucion-sumario.csv
implementacion/: CMakeLists.txt  main.cpp
implementacion/src/: IO.h  grafo.h  iter.h  iterativos.pseudo  pagerank.h  run.h
implementacion/src/impl/: IO.cpp  grafo.cpp  iter.cpp  pagerank.cpp  run.cpp
implementacion/tests/: iterativos-tests.cpp
informe/: main.tex
informe/files/: citations.bib  header.tex
informe/files/src/: caratula.tex  conclusiones.tex  convergencia.tex  desarrollo.tex  introduccion.tex  representacion.tex  resumen.tex  temporal.tex
informe/files/src/.code/: README.md  eg1.pseudo  eg2.pseudo  eg3.pseudo  gauss_seidel.pseudo  jacobi.pseudo  sinv.pseudo
informe/files/src/.media/: README.md
informe/popo/: borrador.txt  eg1.pseudo  eg2.pseudo  eg3.pseudo
